force-app/main/default/objects/movedata__Contact_Platform_Key__c/movedata__Contact_Platform_Key__c.object-meta.xml
<CustomObject>
    <label>Contact Platform Key</label>
    <nameField>
        <displayFormat>CPK-{000000}</displayFormat>
        <label>Contact Platform Key Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Platform Keys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>