force-app/main/default/objects/movedata__Contact_Platform_Key__c/fields/movedata__Contact__c.field-meta.xml
<CustomField>
    <fullName>movedata__Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Platform Keys</relationshipLabel>
    <relationshipName>Contact_Platform_Keys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>