force-app/main/default/objects/movedata__Contact_Platform_Key__c/fields/movedata__Platform__c.field-meta.xml
<CustomField>
    <fullName>movedata__Platform__c</fullName>
    <label>Platform</label>
    <length>50</length>
    <type>Text</type>
</CustomField>