force-app/main/default/objects/movedata__Contact_Platform_Key__c/fields/movedata__Platform_Key__c.field-meta.xml
<CustomField>
    <fullName>movedata__Platform_Key__c</fullName>
    <description>MoveData Platform Key for a Contact.  Used to link a contact with multiple platforms.</description>
    <externalId>true</externalId>
    <label>Platform Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>